[package]
name = "solana-trading-bot"
version = "1.0.0"
edition = "2021"

[lib]
name = "solana_trading_bot"
path = "src/lib.rs"

[[bin]]
name = "solana-trading-bot"
path = "src/main.rs"

[[bin]]
name = "backtest"
path = "src/bin/backtest.rs"

[[bin]]
name = "generate_wallet"
path = "src/bin/generate_wallet.rs"

[[bin]]
name = "test_rpc"
path = "src/bin/test_rpc.rs"

[[bin]]
name = "check_balance"
path = "src/bin/check_balance.rs"

[dependencies]
# Solana - Using v1.17 for stability
solana-sdk = "~1.17"
solana-client = "~1.17"
solana-transaction-status = "~1.17"
spl-token = "4.0"
spl-associated-token-account = "2.2"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# WebSocket for real-time monitoring
tokio-tungstenite = "0.20"
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
dotenv = "0.15"
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
bs58 = "0.5"
base64 = "0.21"
chrono = "0.4"
futures = "0.3"
bincode = "1.3"

# Security - removed secrecy to avoid zeroize conflicts
zeroize = { version = "1.3", features = ["zeroize_derive"] }

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# LRU cache for memory management
lru = "0.12"

# Telegram notifications
teloxide = { version = "0.12", features = ["macros"] }

# Random number generation
rand = "0.8"

# Cryptography (exact versions required by Solana 1.17)
ed25519-dalek = "=1.0.1"
curve25519-dalek = "=3.2.1"

[dev-dependencies]
mockito = "1.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
